[package]
name = "rust_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
console = "0.15.7"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[lib]
name = "todo_lib"
path = "src/lib.rs"

[[bin]]
name = "todo"
path = "src/main.rs"
